--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,17 @@ body {
     height: 2000px; /*del*/
 }
 
+.main {
+    width: 85%;
+}
 .btn-blue {
     background-color: #432b99;
     font-size: 0.7rem;
-    width: 120px;
-    padding: 7px;
+    width: 150px;
+    padding: 11px 0px;
+}
+.btn-blue:hover {
+    background-color: #835dd6;
 }
 /******** navbar ********/
 .menu-item {
@@ -30,10 +36,27 @@ body {
     width: 85px;
 }
 .sign-in:hover {
-    background-color: #45454545;
+    background-color: #835dd6;
 }
 /************************************************/
 
-/******** navbar ********/
-
+/******** introduce ********/
+.introduce .texts {
+    width: 40%;
+}
+.introduce .image {
+    width: 55%;
+}
+.introduce .image .city {
+    width: 100%;
+}
+.introduce .image .play {
+    width: 17%;
+    transition: all 0.3s;
+}
+.introduce .image .play:hover {
+    width: 20%;
+    transition: all 0.3s;
+    cursor: pointer;
+}
 /************************************************/
