--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,9 @@ body {
     width: 150px;
     padding: 11px 0px;
 }
+.space-100 {
+    height: 100px;
+}
 .btn-blue:hover {
     background-color: #835dd6;
 }
@@ -90,6 +93,43 @@ body {
 /******** gallery ********/
 .gallery img {
  width: 105%;
+}
+/************************************************/
+
+/******** mail ********/
+.mail-in-right {
+    padding: 100px 50px;
+    background: url(../images/shape2.png);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: top right;
+}
+.mail-in-left {
+    padding: 100px 50px;
+    background: url(../images/shape1.png);
+    background-repeat: no-repeat;
+    background-size: 80%;
+    background-position: bottom left;
+}
+.mail span {
+    letter-spacing: 2px;
+    line-height: 25px;
+}
+.mail .input {
+    width: 280px;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+}
+.mail input {
+    width: 83%;
+    border: none;
+}
+.mail .icon {
+    width: 17%;
+    border-left: 2px solid rgba(255, 255, 255, 0.5);
+    cursor: pointer;
+}
+.mail .icon i {
+    font-size: 2.3rem;
 }
 /************************************************/
 
