--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ body {
 }
 .main {
     width: 85%;
-    height: 5000px;
 }
 .btn-blue {
     background-color: #432b99;
@@ -23,6 +22,9 @@ body {
 }
 .space-100 {
     height: 100px;
+}
+.space-50 {
+    height: 50px;
 }
 .btn-blue:hover {
     background-color: #835dd6;
@@ -130,6 +132,12 @@ body {
 }
 .mail .icon i {
     font-size: 2.3rem;
+}
+/************************************************/
+
+/******** footer ********/
+footer ul {
+    list-style: none;
 }
 /************************************************/
 
